fix: attempt1 buttonv4 hover rainbow overflow

--- a/src/components/ButtonV4/ButtonV4.css
+++ b/src/components/ButtonV4/ButtonV4.css
@@ -14,7 +14,6 @@
 }
 
 .buttonv4-btn:before {
-  z-index: 999;
   position: absolute;
   content: "";
   top: -2px;
@@ -43,6 +42,7 @@
 }
 .buttonv4-btn:hover:before {
   opacity: 1;
+  z-index: -1;
 }
 .buttonv4-btn:hover:active {
   background: none;
